# heck

./: #!.vbs  Cargo.toml  SERIALISATION.md  build.rs  compile_settings_schema.bat  test_world.map
assets/: settings.gschema.xml  styles.css
internal/shaders/: basic.frag  basic.vert  lighting.frag  picking.frag  picking.vert  postbuffer.frag  terrain.frag  viz.frag  viz.vert
resources/: about.ui  component_picker.ui  editor.ui  entity_namer.ui  entity_picker.ui  res.gresource.xml  window.ui
src/: audio.rs  camera.rs  main.rs  meshes.rs  mouse.rs  renderer.rs  skeletal_animation.rs  textures.rs  ui.rs  viewport.rs
src/h2eck_window/: imp.rs  mod.rs
src/h2eck_window/about_window/: imp.rs  mod.rs
src/h2eck_window/component_picker/: imp.rs  mod.rs
src/h2eck_window/editor/: imp.rs  mod.rs
src/h2eck_window/entity_namer/: imp.rs  mod.rs
src/h2eck_window/entity_picker/: imp.rs  mod.rs
src/optimisations/: DoubleIndexVec.rs
src/renderer/: camera.rs  helpers.rs  keyboard.rs  light.rs  mesh.rs  mod.rs  raycasting.rs  shader.rs  terrain.rs  texture.rs  types.rs
src/ui_defs/: entity_inspector.rs  entity_list.rs  mod.rs
src/worldmachine/: components.rs  components_base_impl.rs  ecs.rs  entities.rs  entities_base_impl.rs  helpers.rs  mod.rs  savestates.rs
