[package]
name = "h2eck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4", package = "gtk4" }
dae-parser = "0.8.7"
gfx-maths = "0.2.8"
png = "0.17.5"
log = "0.4.0"
env_logger = "0.8.4"
lazy_static = "1.4.0"
gl_matrix = "0.0"

[build-dependencies]
gtk = { version = "0.4", package = "gtk4" }

[target.'cfg(target_os = "linux")'.dependencies]
libsex = { path = "../libsex" }