[package]
name = "h2eck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gltf = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
glad-gl = { path = "./glad-gl" }
shared_library = "0.1"
epoxy = "0.1.0"
serde_yaml = "0.9"
rmp-serde = "1.1.0"
gfx-maths = { version = "0.2.8", features = ["serde"]}
image = "0.24.3"
log = "0.4.0"
env_logger = "0.8.4"
lazy_static = "1.4.0"
gl_matrix = "0.0"
rand = "0.8.5"
egui_glfw_gl = { git = "https://github.com/floppydiskette/egui_glfw_gl" }
glfw = { version = "0.51.0" } # todo: update once our egui fork is updated to the latest glfw
fyrox-sound = { version = "0.30.0" }
tokio = { version = "1", features = ["full"] }